<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_main_brand_carton_format_enum" Id="{0ec7db1f-eae5-42f4-b3c4-12d46ad55b9e}">
    <Declaration><![CDATA[TYPE csp_main_brand_carton_format_enum :
	(
		csp_MAIN_BRAND_X_COUNT_XxXCARTON_X_COUNT_CASE  	:= 0,
		csp_MAIN_BRAND_6_COUNT_2x3CARTON_6_COUNT_CASE  	:= 1,
		csp_MAIN_BRAND_8_COUNT_2x4CARTON_6_COUNT_CASE  	:= 2,
		csp_MAIN_BRAND_10_COUNT_2x3CARTON_6_COUNT_CASE	:= 3,
		csp_MAIN_BRAND_12_COUNT_2x3CARTON_6_COUNT_CASE	:= 4,
		csp_MAIN_BRAND_16_COUNT_2x3CARTON_4_COUNT_CASE	:= 5,
		csp_MAIN_BRAND_18_COUNT_2x3CARTON_4_COUNT_CASE	:= 6,
		csp_MAIN_BRAND_14_COUNT_2x4CARTON_6_COUNT_CASE	:= 7,
		csp_MAIN_BRAND_16_COUNT_2x4CARTON_6_COUNT_CASE	:= 8,
		csp_MAIN_BRAND_20_COUNT_2x4CARTON_4_COUNT_CASE	:= 9,
		csp_MAIN_BRAND_22_COUNT_2x4CARTON_4_COUNT_CASE	:= 10,
		csp_MAIN_BRAND_24_COUNT_2x4CARTON_4_COUNT_CASE	:= 11,
		csp_MAIN_BRAND_28_COUNT_2x4CARTON_4_COUNT_CASE	:= 12,
		csp_MAIN_BRAND_30_COUNT_2x4CARTON_4_COUNT_CASE	:= 13,
		csp_MAIN_BRAND_32_COUNT_2x4CARTON_4_COUNT_CASE	:= 14,
		csp_MAIN_BRAND_34_COUNT_3x4CARTON_4_COUNT_CASE	:= 15,
		csp_MAIN_BRAND_36_COUNT_3x4CARTON_4_COUNT_CASE	:= 16,		
		csp_MAIN_BRAND_44_COUNT_3x4CARTON_4_COUNT_CASE	:= 17,
		csp_MAIN_BRAND_46_COUNT_3x4CARTON_4_COUNT_CASE	:= 18,
		csp_MAIN_BRAND_48_COUNT_3x4CARTON_4_COUNT_CASE	:= 19
	
	) := csp_MAIN_BRAND_X_COUNT_XxXCARTON_X_COUNT_CASE;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>