<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_main_brand_product_dimension" Id="{40e9f73c-e06f-4cb7-b5e5-529dc0ba3a1a}">
    <Declaration><![CDATA[TYPE csp_main_brand_product_dimension :
	STRUCT
		
		carton_size_L_mm:								LREAL := 100; (*$P min := 0; max := 200; step := 0.1; unit :=  mm; desc := Carton Length; $*)
		carton_size_W_mm:								LREAL := 100; (*$P min := 0; max := 200; step := 0.1; unit :=  mm; desc := Carton Width; $*)
		carton_size_D_mm:								LREAL := 100; (*$P min := 0; max := 200; step := 0.1; unit :=  mm; desc := Carton Depth; $*)
				
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>